common/force-app/main/default/objects/Product_Prerequisite__c/Product_Prerequisite__c.object-meta.xml
<CustomObject>
    <label>Product Prerequisite</label>
    <nameField>
        <label>Product  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Prerequisites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>