common/force-app/main/default/objects/Product_Prerequisite__c/fields/Actual_Funding_timeline_achieved__c.field-meta.xml
<CustomField>
    <fullName>Actual_Funding_timeline_achieved__c</fullName>
    <label>Actual Funding timeline achieved</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>