common/force-app/main/default/objects/Product_Prerequisite__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund Manager that approved the product</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites1</relationshipName>
    <type>Lookup</type>
</CustomField>