common/force-app/main/default/objects/Product_Prerequisite__c/fields/Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Authorized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites</relationshipName>
    <type>Lookup</type>
</CustomField>