common/force-app/main/default/objects/Product_Prerequisite__c/fields/Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Button_Text__c</fullName>
    <label>Button Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>