common/force-app/main/default/objects/Product_Prerequisite__c/fields/Capital_Allocation_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Capital_Allocation_Agreement__c</fullName>
    <label>Capital Allocation Agreement</label>
    <type>Url</type>
</CustomField>