common/force-app/main/default/objects/Product_Prerequisite__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <label>Compliance</label>
    <type>Url</type>
</CustomField>