common/force-app/main/default/objects/Product_Prerequisite__c/fields/Compliance_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Sign Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_PrerequisitesoNby</relationshipName>
    <type>Lookup</type>
</CustomField>