common/force-app/main/default/objects/Product_Prerequisite__c/fields/Create_Deposit_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Create_Deposit_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Deposit Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>