common/force-app/main/default/objects/Product_Prerequisite__c/fields/Create_UNite_Cert__c.field-meta.xml
<CustomField>
    <fullName>Create_UNite_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Unit Cert</label>
    <type>Checkbox</type>
</CustomField>