common/force-app/main/default/objects/Product_Prerequisite__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The name of the company that this product belongs to.</description>
    <inlineHelpText>The VC company or the SPV.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Prerequisites</relationshipLabel>
    <relationshipName>Product_Prerequisites</relationshipName>
    <type>Lookup</type>
</CustomField>