common/force-app/main/default/objects/Product_Prerequisite__c/fields/Date_Fund_Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Fund_Manager_Approved__c</fullName>
    <label>Date Fund Manager Approved</label>
    <type>Date</type>
</CustomField>