common/force-app/main/default/objects/Product_Prerequisite__c/fields/Deal_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Deal_Page_Link__c</fullName>
    <label>Deal Page Link</label>
    <type>Url</type>
</CustomField>