common/force-app/main/default/objects/Product_Prerequisite__c/fields/Deal_Partner__c.field-meta.xml
<CustomField>
    <fullName>Deal_Partner__c</fullName>
    <label>Deal Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uniseed</fullName>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Sydney Angels</fullName>
            </value>
            <value>
                <fullName>BlueChilli</fullName>
            </value>
            <value>
                <fullName>Clearstate</fullName>
            </value>
            <value>
                <fullName>Dominet</fullName>
            </value>
            <value>
                <fullName>Adrian Bunter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>