common/force-app/main/default/objects/Product_Prerequisite__c/fields/FAQ_s__c.field-meta.xml
<CustomField>
    <fullName>FAQ_s__c</fullName>
    <label>FAQ&apos;s</label>
    <type>Url</type>
</CustomField>