common/force-app/main/default/objects/Product_Prerequisite__c/fields/Final_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Date__c</fullName>
    <label>Final Approval Date</label>
    <type>DateTime</type>
</CustomField>