common/force-app/main/default/objects/Product_Prerequisite__c/fields/Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_PrerequisiteslCFY</relationshipName>
    <type>Lookup</type>
</CustomField>