common/force-app/main/default/objects/Product_Prerequisite__c/fields/Finance_Owner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites6</relationshipName>
    <type>Lookup</type>
</CustomField>