common/force-app/main/default/objects/Product_Prerequisite__c/fields/Fixed_Returns__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Returns__c</fullName>
    <label>Fixed Returns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>