common/force-app/main/default/objects/Product_Prerequisite__c/fields/Forecast_Returns__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Returns__c</fullName>
    <label>Forecast Returns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>