common/force-app/main/default/objects/Product_Prerequisite__c/fields/Fund_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Fund_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fund Manager Approval</label>
    <type>Checkbox</type>
</CustomField>