common/force-app/main/default/objects/Product_Prerequisite__c/fields/Funding_Approval__c.field-meta.xml
<CustomField>
    <fullName>Funding_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_PrerequisiteslCFJ</relationshipName>
    <type>Lookup</type>
</CustomField>