common/force-app/main/default/objects/Product_Prerequisite__c/fields/Funding_Owner__c.field-meta.xml
<CustomField>
    <fullName>Funding_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites4</relationshipName>
    <type>Lookup</type>
</CustomField>