common/force-app/main/default/objects/Product_Prerequisite__c/fields/Funds_Manager__c.field-meta.xml
<CustomField>
    <fullName>Funds_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funds Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites5</relationshipName>
    <type>Lookup</type>
</CustomField>