common/force-app/main/default/objects/Product_Prerequisite__c/fields/Funds_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Funds_Manager_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funds Manager Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_PrerequisiteslCEl</relationshipName>
    <type>Lookup</type>
</CustomField>