common/force-app/main/default/objects/Product_Prerequisite__c/fields/Google_Drive_Folder__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder__c</fullName>
    <label>Google Drive Folder</label>
    <type>Url</type>
</CustomField>