common/force-app/main/default/objects/Product_Prerequisite__c/fields/IM_PDS__c.field-meta.xml
<CustomField>
    <fullName>IM_PDS__c</fullName>
    <inlineHelpText>Link to approved/Final document only</inlineHelpText>
    <label>IM/PDS</label>
    <required>true</required>
    <type>Url</type>
</CustomField>