common/force-app/main/default/objects/Product_Prerequisite__c/fields/IM_PDS_CSF_Offer__c.field-meta.xml
<CustomField>
    <fullName>IM_PDS_CSF_Offer__c</fullName>
    <inlineHelpText>Link to approved/Final document only</inlineHelpText>
    <label>IM/PDS/CSF Offer</label>
    <type>Url</type>
</CustomField>