common/force-app/main/default/objects/Product_Prerequisite__c/fields/Investor_Contribution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Investor_Contribution_Fee__c</fullName>
    <label>Investor Contribution Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>