common/force-app/main/default/objects/Product_Prerequisite__c/fields/Lead_Investor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Add the lead investor, if applicable</inlineHelpText>
    <label>Lead Investor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Prerequisites</relationshipLabel>
    <relationshipName>Product_Prerequisites</relationshipName>
    <type>Lookup</type>
</CustomField>