common/force-app/main/default/objects/Product_Prerequisite__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <label>Legal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>