common/force-app/main/default/objects/Product_Prerequisite__c/fields/Licence_and_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Licence_and_Disclaimer__c</fullName>
    <label>Licence and Disclaimer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>