common/force-app/main/default/objects/Product_Prerequisite__c/fields/Marketing_Approval__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites9</relationshipName>
    <type>Lookup</type>
</CustomField>