common/force-app/main/default/objects/Product_Prerequisite__c/fields/Marketing_Owner__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites3</relationshipName>
    <type>Lookup</type>
</CustomField>