common/force-app/main/default/objects/Product_Prerequisite__c/fields/Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Strategy__c</fullName>
    <label>Marketing Strategy</label>
    <type>Url</type>
</CustomField>