common/force-app/main/default/objects/Product_Prerequisite__c/fields/Misc_Documents__c.field-meta.xml
<CustomField>
    <fullName>Misc_Documents__c</fullName>
    <description>Use this section to add any miscellaneous documents. Add them using a bullet point and title along with a brief description to the document.</description>
    <label>Misc Documents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>