common/force-app/main/default/objects/Product_Prerequisite__c/fields/Offer_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Close_Date__c</fullName>
    <inlineHelpText>The target date for capital raise to be complete</inlineHelpText>
    <label>Offer Close Date</label>
    <type>Date</type>
</CustomField>