common/force-app/main/default/objects/Product_Prerequisite__c/fields/Offer_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Launch_Date__c</fullName>
    <label>Offer Launch Date</label>
    <type>Date</type>
</CustomField>