common/force-app/main/default/objects/Product_Prerequisite__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Prerequisites</relationshipLabel>
    <relationshipName>Product_Prerequisites</relationshipName>
    <type>Lookup</type>
</CustomField>