common/force-app/main/default/objects/Product_Prerequisite__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>Type of product, example Venture Capital for a tech start up, First Mortgage Product, Equity offer in a property development</inlineHelpText>
    <label>Product</label>
    <length>250</length>
    <type>Text</type>
</CustomField>