common/force-app/main/default/objects/Product_Prerequisite__c/fields/Product_Approval_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Approval_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Approval Group</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites8</relationshipName>
    <type>Lookup</type>
</CustomField>