common/force-app/main/default/objects/Product_Prerequisite__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Brief description of the product</description>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>