common/force-app/main/default/objects/Product_Prerequisite__c/fields/Product_Owner_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner Sign Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prerequisites7</relationshipName>
    <type>Lookup</type>
</CustomField>