common/force-app/main/default/objects/Product_Prerequisite__c/fields/Product_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Product_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Documents associated with the Product Proposal links to all final docs</inlineHelpText>
    <label>Product Proposal</label>
    <type>Checkbox</type>
</CustomField>