common/force-app/main/default/objects/Product_Prerequisite__c/fields/Product_Proposal_Document__c.field-meta.xml
<CustomField>
    <fullName>Product_Proposal_Document__c</fullName>
    <description>Link to the Capital Raising Briefing (CRB) document</description>
    <inlineHelpText>Link to the final PDF of the Product Proposal Document</inlineHelpText>
    <label>Product Proposal Document</label>
    <type>Url</type>
</CustomField>