common/force-app/main/default/objects/Product_Prerequisite__c/fields/Product_Proposal_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Proposal_Received_Date__c</fullName>
    <label>Product Proposal Received Date</label>
    <type>Date</type>
</CustomField>