common/force-app/main/default/objects/Product_Prerequisite__c/fields/Project_Control_Document__c.field-meta.xml
<CustomField>
    <fullName>Project_Control_Document__c</fullName>
    <inlineHelpText>Link to the Development Managers Project Control Document</inlineHelpText>
    <label>Project Control Document</label>
    <type>Url</type>
</CustomField>