common/force-app/main/default/objects/Product_Prerequisite__c/fields/Raise_Stage__c.field-meta.xml
<CustomField>
    <fullName>Raise_Stage__c</fullName>
    <label>Raise Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Seed</fullName>
            </value>
            <value>
                <fullName>SEED</fullName>
            </value>
            <value>
                <fullName>SERIES A</fullName>
            </value>
            <value>
                <fullName>SERIES B</fullName>
            </value>
            <value>
                <fullName>SERIES C</fullName>
            </value>
            <value>
                <fullName>Series C+</fullName>
            </value>
            <value>
                <fullName>SERIES D</fullName>
            </value>
            <value>
                <fullName>Pre-IPO</fullName>
            </value>
            <value>
                <fullName>IPO</fullName>
            </value>
            <value>
                <fullName>Bridging</fullName>
            </value>
            <value>
                <fullName>ORDINARY EQUITY</fullName>
            </value>
            <value>
                <fullName>PREF EQUITY, EARLY STAGE</fullName>
            </value>
            <value>
                <fullName>PREF EQUITY, LATE STAGE</fullName>
            </value>
            <value>
                <fullName>SECOND MORTGAGE</fullName>
            </value>
            <value>
                <fullName>SECONDARY MARKET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>