common/force-app/main/default/objects/Product_Prerequisite__c/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <inlineHelpText>Choose the option that is reflected in the PDS/IM. If it is a set return on an annualised basis, choose &quot;Per Annum&quot;.</inlineHelpText>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Annum</fullName>
            </value>
            <value>
                <fullName>Fixed Return</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>