common/force-app/main/default/objects/Product_Prerequisite__c/fields/Salesforce_owner__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_PrerequisitesoNbo</relationshipName>
    <type>Lookup</type>
</CustomField>