common/force-app/main/default/objects/Product_Prerequisite__c/fields/Salesforce_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Sign Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_PrerequisitesoNcN</relationshipName>
    <type>Lookup</type>
</CustomField>