common/force-app/main/default/objects/Product_Prerequisite__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <inlineHelpText>The sector that this product will operate in</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FINTECH</fullName>
            </value>
            <value>
                <fullName>AGTECH</fullName>
            </value>
            <value>
                <fullName>FOODTECH</fullName>
            </value>
            <value>
                <fullName>PROPTECH</fullName>
            </value>
            <value>
                <fullName>EDTECH</fullName>
            </value>
            <value>
                <fullName>ARTS &amp; ENTERTAINMENT</fullName>
            </value>
            <value>
                <fullName>MEDTECH</fullName>
            </value>
            <value>
                <fullName>IMPACT</fullName>
            </value>
            <value>
                <fullName>PROPERTY DEVELOPMENT EQUITY</fullName>
            </value>
            <value>
                <fullName>PROPERTY DEVELOPMENT INCOME</fullName>
            </value>
            <value>
                <fullName>PROPERTY DEVELOPMENT FIRST MORTGAGE</fullName>
            </value>
            <value>
                <fullName>BIOTECH</fullName>
            </value>
            <value>
                <fullName>MarTech</fullName>
            </value>
            <value>
                <fullName>SpaceTech</fullName>
            </value>
            <value>
                <fullName>HealthTech</fullName>
            </value>
            <value>
                <fullName>Renewables</fullName>
            </value>
            <value>
                <fullName>EnergyTech</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Cosmetics</fullName>
            </value>
            <value>
                <fullName>Social Network</fullName>
            </value>
            <value>
                <fullName>TravelTech</fullName>
            </value>
            <value>
                <fullName>SecurityTech</fullName>
            </value>
            <value>
                <fullName>ClimateTech</fullName>
            </value>
            <value>
                <fullName>DeathTech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Digital Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>