common/force-app/main/default/objects/Product_Prerequisite__c/fields/Security_Price__c.field-meta.xml
<CustomField>
    <fullName>Security_Price__c</fullName>
    <label>Security Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>