common/force-app/main/default/objects/Product_Prerequisite__c/fields/Security_Type__c.field-meta.xml
<CustomField>
    <fullName>Security_Type__c</fullName>
    <label>Security Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>