common/force-app/main/default/objects/Product_Prerequisite__c/fields/Suburb_Report__c.field-meta.xml
<CustomField>
    <fullName>Suburb_Report__c</fullName>
    <label>Suburb Report</label>
    <type>Url</type>
</CustomField>