common/force-app/main/default/objects/Product_Prerequisite__c/fields/Summary_Doc__c.field-meta.xml
<CustomField>
    <fullName>Summary_Doc__c</fullName>
    <inlineHelpText>Final approved version only</inlineHelpText>
    <label>Summary Doc</label>
    <type>Url</type>
</CustomField>