common/force-app/main/default/objects/Product_Prerequisite__c/fields/Syndicate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Syndicate_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syndicate Lead</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Prerequisites (Syndicate Lead)</relationshipLabel>
    <relationshipName>Product_Prerequisites3</relationshipName>
    <type>Lookup</type>
</CustomField>