common/force-app/main/default/objects/Product_Prerequisite__c/fields/The_Offer__c.field-meta.xml
<CustomField>
    <fullName>The_Offer__c</fullName>
    <description>Add Hero image from cover of the IM/PDS</description>
    <label>The Offer</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>