common/force-app/main/default/objects/Product_Prerequisite__c/fields/Trust_Deed_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Deed_Name__c</fullName>
    <label>Trust Deed Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>