common/force-app/main/default/objects/Product_Prerequisite__c/fields/VentureCrowd_Fee_Text__c.field-meta.xml
<CustomField>
    <fullName>VentureCrowd_Fee_Text__c</fullName>
    <label>VentureCrowd Fee Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>