common/force-app/main/default/objects/Product_Prerequisite__c/fields/WASP_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>WASP_Email_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WASP Email Template</label>
    <type>Checkbox</type>
</CustomField>