common/force-app/main/default/objects/Product_Prerequisite__c/validationRules/Declined_REason.validationRule-meta.xml
<ValidationRule>
    <fullName>Declined_REason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Product_Stage__c, &apos;Declined&apos;) &amp;&amp;  ISBLANK ( Declined_Reason__c )</errorConditionFormula>
    <errorDisplayField>Declined_Reason__c</errorDisplayField>
    <errorMessage>Please enter the reason to Decline the Product</errorMessage>
</ValidationRule>