common/force-app/main/default/objects/Product_Prerequisite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
    </filters>
    <label>All</label>
</ListView>